# factoring

./: Makefile
PowOf2Mod/gwnum/: CMakeLists.txt  gwnum-config.cmake.in  gwnum.c  gwnum.h  gwthread.h  makefile
